--- a/app.html
+++ b/app.html
@@ -2,13 +2,14 @@
 <html {{ HTML_ATTRS }}>
 
 <head {{ HEAD_ATTRS }}>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-90J215KBF1"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-93L924PZWJ"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-      gtag('config', 'G-90J215KBF1');
+        gtag('config', 'G-93L924PZWJ');
     </script>
     {{ HEAD }}
 </head>
