--- a/app.html
+++ b/app.html
@@ -18,7 +18,7 @@
             appId: "1:313801605853:web:eae7a9fee24a7b06535134",
             measurementId: "G-93L924PZWJ"
         };
-
+        const app = initializeApp(firebaseConfig);
         // Initialize Firebase
         const analytics = getAnalytics(app);
     </script>
